--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -7,21 +7,17 @@
  *
  * You're free to add application-wide styles to this file and they'll appear at the top of the
  * compiled file, but it's generally better to create a new file per style scope.
- *
  *= require_self
+ *= require bootstrap.min
+ *= require bootstrap-theme.min
  *= require_tree .
  */
 
-#flash_error {
-    border: 1px solid #000066;
-    padding: 4px;
-    margin-bottom: 10px;
-    background-color: #cc3333;
-}
-
-#flash_notice {
-    border: 1px solid #000066;
-    padding: 4px;
-    margin-bottom: 10px;
-    background-color: #A3B15A;
+@font-face {
+    font-family: 'Glyphicons Halflings';
+    src: url('../assets/glyphicons-halflings-regular.eot');
+    src: url('../assets/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'),
+    url('../assets/glyphicons-halflings-regular.woff') format('woff'),
+    url('../assets/glyphicons-halflings-regular.ttf') format('truetype'),
+    url('../assets/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
 }
