--- a/app/views/authentication/sign_in.html.erb
+++ b/app/views/authentication/sign_in.html.erb
@@ -1,14 +1,16 @@
-<p>Sign In</p>
-<%= form_for @user, :as => :user, :url => sign_in_path(@user) do |f| %>
-    <p>
-      <%= f.label 'username or email:' %><br />
-      <%= f.text_field :username %>
-    </p>
-    <p>
-      <%= f.label 'password:' %><br />
-      <%= f.password_field :password %>
-    </p>
-    <p>
-      <%= f.submit 'Sign In' %>&nbsp;&nbsp;&nbsp;
-    </p>
-<% end %>
+<div class="center hero-unit">
+    <h2 class="form-signin-heading">Connexion</h2>
+    <%= form_for @user, :as => :user, :url => sign_in_path(@user) do |f| %>
+        <p>
+          <%= f.label 'username or email:' %><br />
+          <%= f.text_field :username %>
+        </p>
+        <p>
+          <%= f.label 'password:' %><br />
+          <%= f.password_field :password %>
+        </p>
+        <p>
+          <%= f.submit 'Sign In' %>&nbsp;&nbsp;&nbsp;
+        </p>
+    <% end %>
+</div>
