--- a/app/views/artiste/fiche.html.erb
+++ b/app/views/artiste/fiche.html.erb
@@ -4,27 +4,38 @@
 <div class="liste-albums">
   <% @albums.each do |album| %>
       <div>
+        <%  rating = album.get_rating(album.id, current_user.id)%>
             <img src="/assets/albums/<%= album.id %>.jpg" width="125">
             <h4><%= album.name %></h4>
                <%= album.anneeSortie %><br />
-          <p>Averate rating</p>
+          <p>Moyenne des usagers</p>
           <div class="star">
             <script>
                 $('.star').raty({
                     readOnly: true,
                     path: '/assets',
-                    score: 1
+                    score: 0
                 });
             </script>
           </div>
-          <p>Your rating</p>
-          <div class="user_star">
+          <p>Ma note</p>
+          <div data-number= <%= rating.id %> data-score=  <%= rating.rating %> class="user_star">
             <script>
-                $('.user_star').raty({
+                 $('.user_star').raty({
                     path: '/assets',
                     half: true,
-                    score: 3
-                });
+                    score: function() {
+                        return $(this).attr('data-score');
+                    },
+                    click: function(score, evt) {
+                        $.ajax({
+
+                            url: '/ratings/' +  $(this).attr('data-number'),
+                            type: 'PATCH',
+                            data: { rating: score }
+                        }).done(function (data){});
+                    }
+                 });
             </script>
           </div>
             <a href="#">+ Collection</a><br />
@@ -36,14 +47,43 @@
 <h3>EP</h3>
 <div class="liste-albums">
   <% @eps.each do |ep| %>
-      <img src="/assets/albums/<%= ep.id %>.jpg" width="125">
-      <h4><%= ep.name %></h4>
-      <%= ep.anneeSortie %><br />
-      <p>Averate rating</p>
-      <div id="star"></div>
-      <p>Your rating</p>
-      <div id="user_star"></div>
-      <a href="#">+ Collection</a><br />
-      <a href="#">+ Plus tard</a>
+      <div>
+          <%  rating = ep.get_rating(ep.id, current_user.id)%>
+          <img src="/assets/albums/<%= ep.id %>.jpg" width="125">
+          <h4><%= ep.name %></h4>
+          <%= ep.anneeSortie %><br />
+        <p>Moyenne des usagers</p>
+        <div class="star">
+          <script>
+              $('.star').raty({
+                  readOnly: true,
+                  path: '/assets',
+                  score: 0
+              });
+          </script>
+        </div>
+        <p>Ma note</p>
+        <div data-number= <%= rating.id %> data-score=  <%= rating.rating %> class="user_star">
+          <script>
+              $('.user_star').raty({
+                  path: '/assets',
+                  half: true,
+                  score: function() {
+                      return $(this).attr('data-score');
+                  },
+                  click: function(score, evt) {
+                      $.ajax({
+
+                          url: '/ratings/' +  $(this).attr('data-number'),
+                          type: 'PATCH',
+                          data: { rating: score }
+                      }).done(function (data){});
+                  }
+              });
+          </script>
+        </div>
+          <a href="#">+ Collection</a><br />
+          <a href="#">+ Plus tard</a>
+      </div>
   <%end%>
 </div>
