--- a/app/views/profil/show.html.erb
+++ b/app/views/profil/show.html.erb
@@ -1,8 +1,8 @@
 <h2><%= @user.username %></h2>
 
 <p>Albums notés: <%= @rating.count %></p>
-<p>Collection: </p>
-<p>À écouter plus tard: </p>
+<p>Collection:  <%= @collection.count %></p>
+<p>À écouter plus tard:  <%= @plustard.count %></p>
 
 <% if @rating.count != 0 %>
     <h2>Notes</h2>
@@ -46,6 +46,7 @@
                       });
                   </script>
                 </div></td>
+                <td><%= link_to "Supprimer", suppRating_path(:id => rating.id), :confirm => "Êtes-vous sûr de vouloir supprimer  #{rating.album.name} de la liste?", :method => :post %></td>
               </tr>
 
       <%end%>
