--- a/app/views/profil/wantlist.html.erb
+++ b/app/views/profil/wantlist.html.erb
@@ -11,7 +11,7 @@
         <td><%= element.album.name %></td>
         <td><%= element.album.artiste.nom %></td>
         <td><%= link_to "C'est fait", changerListe_path(:id => element.id), :method => :post %></td>
-        <td></td>
+        <td><%= link_to "Supprimer", supprimerListe_path(:id => element.id), :method => :delete, :confirm => "Êtes-vous sûr de vouloir supprimer  #{element.album.name} de la liste?" %></td>
       </tr>
   <%end%>
 
