--- a/app/views/authentication/new_user.html.erb
+++ b/app/views/authentication/new_user.html.erb
@@ -1,4 +1,4 @@
-<p>Sign Up</p>
+<h2>S'inscrire</h2>
 <%= form_for @user, :as => :user, :url => new_user_path, :method => :post do |f| %>
     <p>
       <%= f.label "Nom d'utilisateur:" %><br/>
