--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -7,17 +7,17 @@
  *
  * You're free to add application-wide styles to this file and they'll appear at the top of the
  * compiled file, but it's generally better to create a new file per style scope.
- *= require_self
+
  *= require bootstrap.min
  *= require bootstrap-theme.min
+  *= require_self
  *= require_tree .
  */
 
 @font-face {
     font-family: 'Glyphicons Halflings';
-    src: url('../assets/glyphicons-halflings-regular.eot');
-    src: url('../assets/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'),
-    url('../assets/glyphicons-halflings-regular.woff') format('woff'),
-    url('../assets/glyphicons-halflings-regular.ttf') format('truetype'),
-    url('../assets/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
+
 }
+
+.page-header{background-color: #B00100; margin: 0}
+h1{color: #ffffff; margin: 0; padding-top: 25px;}
