--- a/app/views/profil/collection.html.erb
+++ b/app/views/profil/collection.html.erb
@@ -1,11 +1,10 @@
 <h2>Ma collection</h2>
 
-    <table>
+    <table class="table table-striped">
       <tr>
         <th>Album</th>
         <th>Artiste</th>
         <th>Note</th>
-        <th></th>
         <th></th>
       </tr>
       <% @liste.each do |element| %>
@@ -34,7 +33,7 @@
                </script>
                </div>
             </td>
-            <td><%= link_to "Supprimer", supprimerListe_path(:id => element.id), :method => :delete, :confirm => "Êtes-vous sûr de vouloir supprimer  #{element.album.name} de la liste?" %></td>
+            <td><%= link_to "Supprimer", supprimerListe_path(:id_user => current_user.id, :id_album => element.album.id, :typeListe=>1), :method => :delete, :class => "btn btn-danger btn-xs", :confirm => "Êtes-vous sûr de vouloir supprimer  #{element.album.name} de la liste?" %></td>
           </tr>
       <%end%>
     </table>
