Ajouts des étoiles rouges pour la moyenne des usagers / CSS pour la fiche artiste et la page profil

--- a/app/views/profil/show.html.erb
+++ b/app/views/profil/show.html.erb
@@ -12,7 +12,7 @@
 
         <% if @titreRating != rating.rating %>
             </table>
-            <h3><%= rating.rating %></h3>
+            <h3><%= rating.rating %> <img src="/assets/star-on.png"></h3>
             <table class="table table-striped">
               <tr>
                 <th>Album</th>
