--- a/app/views/artiste/fiche.html.erb
+++ b/app/views/artiste/fiche.html.erb
@@ -1,6 +1,7 @@
 <h2><%= @artiste.nom %></h2>
 
-<h3>LP</h3>
+<h3>Albums</h3>
+<hr />
 <div class="row">
   <% @albums.each do |album| %>
       <div class="col-md-4 container">
@@ -26,20 +27,22 @@
 
             <div class="pull-right">
 
-              <%= album.anneeSortie %><br />
-              <p>Moyenne des usagers</p>
+              <strong><%= album.anneeSortie %></strong><br />
+              Moyenne des usagers<br />
               <div class="star" data-score=<%= album.average_rating(album.id) %>>
                 <script>
                     $('.star').raty({
                         readOnly: true,
                         path: '/assets',
+                        starOn: 'red-star-on.png',
+                        starHalf: 'red-star-half.png',
                         score:  function() {
                             return $(this).attr('data-score');
                         }
                     });
                 </script>
               </div>
-              <p>Ma note</p>
+              Ma note<br />
               <div data-number= <%= rating.id %> data-score=  <%= rating.rating %> class="user_star">
                 <script>
                     $('.user_star').raty({
@@ -68,27 +71,47 @@
 </div>
 <% if @eps.size != 0 %>
     <h3>EP</h3>
-
+    <hr />
     <div class="row">
       <% @eps.each do |ep| %>
           <div class="col-md-4">
+            <h4><%= ep.name %></h4>
               <%  rating = ep.get_rating(ep.id, current_user.id)%>
-              <img src="/assets/albums/<%= ep.id %>.jpg" width="125">
-              <h4><%= ep.name %></h4>
-              <%= ep.anneeSortie %><br />
-            <p>Moyenne des usagers</p>
+            <div class="pull-left">
+              <img  src="/assets/albums/<%= ep.id %>.jpg" width="125"><br />
+              <%= if LigneListe.where(:user_id => current_user.id, :album_id => ep.id, :typeListe => 1).blank?
+                    link_to "+ Collection",{:controller=>"ligneliste", :action=>"create", :album_id=>ep.id,
+                                            :user_id => current_user.id, :typeListe=>1, :id_artiste =>ep.artiste_id}, :method=> :post, :class => "btn btn-default collection"
+                  else
+                    link_to "X Collection",{:controller=>"ligneliste", :action=>"destroy", :id_album=>ep.id,
+                                            :id_user => current_user.id,  :typeListe => 1}, :method=> :delete, :class => "btn btn-danger collection"
+                  end%><br />
+              <%= if LigneListe.where(:user_id => current_user.id, :album_id => ep.id, :typeListe => 2).blank?
+                    link_to "+ Plus tard",{:controller=>"ligneliste", :action=>"create", :album_id=>ep.id,
+                                           :user_id => current_user.id, :typeListe=>2, :id_artiste =>ep.artiste_id}, :method=> :post, :class => "btn btn-default"
+                  else
+                    link_to "X Plus tard",{:controller=>"ligneliste", :action=>"destroy", :id_album=>ep.id,
+                                           :id_user => current_user.id, :typeListe => 2}, :method=> :delete, :class => "btn btn-primary"
+                  end%>
+            </div>
+
+            <div class="pull-right">
+              <strong><%= ep.anneeSortie %></strong><br />
+            Moyenne des usagers<br />
             <div class="star" data-score=<%= ep.average_rating(ep.id) %>>
               <script>
                   $('.star').raty({
                       readOnly: true,
                       path: '/assets',
+                      starOn: 'red-star-on.png',
+                      starHalf: 'red-star-half.png',
                       score:  function() {
                           return $(this).attr('data-score');
                       }
                   });
               </script>
             </div>
-            <p>Ma note</p>
+            Ma note<br />
             <div data-number= <%= rating.id %> data-score=  <%= rating.rating %> class="user_star">
               <script>
                   $('.user_star').raty({
@@ -108,9 +131,8 @@
                   });
               </script>
             </div>
-              <a href="#">+ Collection</a><br />
-              <a href="#">+ Plus tard</a>
           </div>
+         </div>
       <%end%>
 <%end%>
 </div>
