--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -20,4 +20,5 @@
 }
 
 .page-header{background-color: #B00100; margin: 0}
-h1{color: #ffffff; margin: 0; padding-top: 25px;}
+h1 a{color: #ffffff; margin: 0; padding-top: 25px;}
+h1 a:hover{color: #ffffff; text-decoration: none}
