--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,9 @@
-<p>Home</p>
+<div>
+  <strong>Parcourez notre grande sélection d'artistes et d'albums</strong>
+  <p>Noter vos albums préférés et gérer votre collection de CD grâce à CDCollection</p>
+  <% if current_user == nil %>
+      <%= link_to "S'inscrire", new_user_path, :class => "btn btn-danger" %> or
+      <%= link_to "Se connecter", sign_in_path, :class => "btn btn-danger" %>
+  <%end%>
+</div>
+
