--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,20 +14,24 @@
 <header>
   <div class="page-header">
     <div class="container">
+      <% if current_user %>
       <div>
-        <h1 class="pull-left">CDCollection</h1>
+        <h1 class="pull-left"><%= link_to "CDCollection", profil_show_path(:id => current_user.id)%></h1>
       </div>
+      <%else%>
+          <div>
+            <h1 class="pull-left"><%= link_to "CDCollection", root_path%></h1>
+          </div>
+      <% end %>
         <p class="pull-right">
           <% if current_user %>
-              Connecté en tant que <%= link_to(current_user.username, profil_path(:id => current_user.id))%>.
-              <%= link_to "Se déconnecter", signed_out_path %>
-          <% else %>
-              <%= link_to "S'inscrire", new_user_path %> or
-              <%= link_to "Se connecter", sign_in_path %>
+              <%= link_to "Se déconnecter", signed_out_path, :class =>"btn btn-primary btn-xs"  %>
+
           <% end %>
         </p>
     </div>
   </div>
+  <% if current_user %>
   <div class="navbar-inner">
     <div class="container">
       <div class="text-right">
@@ -43,14 +47,12 @@
           <li><%= link_to "À écouter plus tard",plus_tard_path %></li>
         </ul>
       </nav>
+
     </div>
   </div>
+  <%end%>
 
 </header>
-
-
-
-
 
 
 <% flash.each do |name, msg| %>
