--- a/app/views/profil/show.html.erb
+++ b/app/views/profil/show.html.erb
@@ -46,7 +46,7 @@
                       });
                   </script>
                 </div></td>
-                <td><%= link_to "Supprimer", suppRating_path(:id => rating.id), :confirm => "Êtes-vous sûr de vouloir supprimer  #{rating.album.name} de la liste?", :method => :post, :class => "btn btn-danger btn-sm" %></td>
+                <td><%= link_to "Supprimer", suppRating_path(:id => rating.id), :confirm => "Êtes-vous sûr de vouloir supprimer  #{rating.album.name} de la liste?", :method => :post %></td>
               </tr>
 
       <%end%>
